--- a/odoo/templates/odoo.conf
+++ b/odoo/templates/odoo.conf
@@ -17,6 +17,9 @@ dbfilter = {{ odoo_config_dbfilter }}
 demo = {{ odoo_config_demo }}
 email_from = {{ odoo_config_email_from }}
 geoip_database = {{ odoo_config_geoip_database }}
+{% if odoo_version >= "17.0" %}
+gevent_port = {{ odoo_config_gevent_port }}
+{% endif %}
 http_enable =  {{ odoo_config_http_enable }}
 http_interface = {{ odoo_config_http_interface }}
 http_port = {{ odoo_config_http_port }}
@@ -33,7 +36,9 @@ log_db_level = {{ odoo_config_log_db_level }}
 log_handler = {{ odoo_config_log_handler }}
 log_level = {{ odoo_config_log_level }}
 logfile = {{ not odoo_logrotate and odoo_config_logfile }}
-longpolling_port = {{ odoo_config_longpolling_port }}
+l{% if odoo_version < "17.0" %}
+ongpolling_port = {{ odoo_config_longpolling_port }}
+{% endif %}
 max_cron_threads = {{ odoo_config_max_cron_threads }}
 new_relic_config_file = {{ odoo_newrelic_config_file }}
 new_relic_environment = {{ odoo_newrelic_environment }}
